pamc/src/tests/sample_code/should_fail/scope/underscore_cannot_be_referenced.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let foo = fun foo_(_: Nat): Nat {
    _
};
